version/0.4/_sources/api/ansys/scade/apitools/expr/access/ProjectionOp.rst.txt




ProjectionOp
============

.. py:class:: ProjectionOp(expression, flow, with_expressions)
   :canonical: ansys.scade.apitools.expr.access.ProjectionOp



Bases: :py:obj:`FlowOp`


   Provides the abstract class for static projection/assignment of a flow.


   :Parameters:

       **expression**
           Call expression to wrap.

       **flow**
           Expression operand.

       **with_expressions**
           Path of the expression.














   ..
       !! processed by numpydoc !!












Overview
--------
.. py:currentmodule:: ProjectionOp
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~with_`
            - Path of the expression.






Import detail
-------------

.. code-block:: python

    from ansys.scade.apitools.expr.access import ProjectionOp


Property detail
---------------
.. py:property:: with_
   :canonical: ansys.scade.apitools.expr.access.ProjectionOp.with_
   :type: list[Expression]


   
   Path of the expression.

   The elements are either labels or indexes.















   ..
       !! processed by numpydoc !!





